Fix(core): Wrap GallerySection in case of small screen

--- a/core/src/_gallery/section/section.module.css
+++ b/core/src/_gallery/section/section.module.css
@@ -21,6 +21,8 @@
 	line-height: 24px;
 }
 
-.container {
-	display: flex;
+@media (min-width: 640px) {
+	.container {
+		display: flex;
+	}
 }
